erDiagram
    Organization {
        UUID id PK
        string name UK
        timestamptz created_at
        timestamptz updated_at
    }

    User {
        UUID id PK
        UUID organization_id FK
        string email UK
        string password_hash
        boolean is_active
        timestamptz created_at
        timestamptz updated_at
    }

    Project {
        UUID id PK
        UUID organization_id FK
        string name
        string description
        timestamptz created_at
        timestamptz updated_at
    }

    ApiKey {
        UUID id PK
        UUID project_id FK
        string key_hash
        string key_prefix
        string label
        timestamptz revoked_at
        timestamptz created_at
        timestamptz updated_at
    }

    Queue {
        UUID id PK
        UUID project_id FK
        string name
        int concurrency_limit
        string status
        timestamptz created_at
        timestamptz updated_at
    }

    RetryPolicy {
        UUID id PK
        UUID queue_id FK
        int max_retries
        string backoff_strategy
        float backoff_base_seconds
        float backoff_max_seconds
        timestamptz created_at
        timestamptz updated_at
    }

    Job {
        UUID id PK
        UUID queue_id FK
        string status
        int priority
        jsonb payload
        timestamptz scheduled_at
        UUID claimed_by_worker_id FK
        timestamptz claimed_at
        timestamptz lease_expires_at
        int attempt_count
        UUID depends_on_job_id FK
        string dedupe_key
        string batch_id
        timestamptz created_at
        timestamptz updated_at
    }

    JobExecution {
        UUID id PK
        UUID job_id FK
        UUID worker_id FK
        int attempt_number
        string status
        timestamptz started_at
        timestamptz finished_at
        jsonb result
        text error
        timestamptz created_at
        timestamptz updated_at
    }

    JobLog {
        UUID id PK
        UUID job_id FK
        UUID execution_id FK
        string level
        text message
        timestamptz timestamp
    }

    Worker {
        UUID id PK
        string name UK
        string status
        timestamptz last_heartbeat_at
        timestamptz started_at
        timestamptz stopped_at
        timestamptz created_at
        timestamptz updated_at
    }

    WorkerHeartbeat {
        UUID id PK
        UUID worker_id FK
        timestamptz timestamp
        jsonb metadata
    }

    DeadLetterEntry {
        UUID id PK
        UUID job_id FK
        text reason
        timestamptz failed_at
        jsonb original_payload
        timestamptz created_at
        timestamptz updated_at
    }

    RecurringJobTemplate {
        UUID id PK
        UUID queue_id FK
        string cron_expression
        jsonb job_payload
        boolean is_active
        timestamptz next_run_at
        timestamptz created_at
        timestamptz updated_at
    }

    Organization ||--o{ User : has
    Organization ||--o{ Project : owns
    Project ||--o{ ApiKey : issues
    Project ||--o{ Queue : contains
    Queue ||--|| RetryPolicy : has
    Queue ||--o{ Job : enqueues
    Queue ||--o{ RecurringJobTemplate : defines
    Worker ||--o{ Job : claims
    Worker ||--o{ JobExecution : runs
    Worker ||--o{ WorkerHeartbeat : emits
    Job ||--o{ JobExecution : attempts
    Job ||--o{ JobLog : logs
    Job ||--o{ DeadLetterEntry : dead_letters
    Job ||--o{ Job : depends_on
